--- a/eqn.tex
+++ b/eqn.tex
@@ -18,15 +18,17 @@
 }
 
 \begin{document}
-$$a^{+} = a + \mathcolor{maroon}{g_0}a + \mathcolor{red}{g_1}v + \frac {1} {\lvert N \rvert} \sum_{x \in N}\bigg(\mathcolor{green}{g_2}(a_x-a)+\mathcolor{blue}{g_3}(v_x-v)+\mathcolor{teal}{g_4}(p_x-p)\bigg)$$
+$$a^{+} = a + \mathcolor{maroon}{g_1}a + \mathcolor{red}{g_2}v + \frac {1} {\lvert N \rvert} \sum_{x \in N}\bigg(\mathcolor{green}{g_3}(a_x-a)+\mathcolor{blue}{g_4}(v_x-v)+\mathcolor{teal}{g_5}(p_x-p)\bigg)$$
 where:\\
 \begin{align*}
 p&~ \text{is the boid's position}\\
 v&~ \text{is its velocity}\\
 a&~ \text{is its acceleration}\\
 N&~ \text{is the set of neighboring boids}\\
-\{g_0, \ldots, g_4\}&~ \text{is the genome of the boid}
+\{g_1, \ldots, g_5\}&~ \text{is the genome of the boid}
 \end{align*}
+
+$$\{ \mathcolor{maroon}{g_1}, \mathcolor{red}{g_2}, \mathcolor{green}{g_3}, \mathcolor{blue}{g_4}, \mathcolor{teal}{g_5} \}$$ 
 
 
 \end{document}
