Added GPL license.

--- a/eqn.tex
+++ b/eqn.tex
@@ -1,3 +1,6 @@
+% Copyright Rupert Deese 2015
+% Licensed under the GNU GPL http://www.gnu.org/licenses/gpl.txt
+
 \documentclass[22pt]{article}
 
 \usepackage{xcolor}
